<resources>
    <string name="app_name">Online Stationery Store</string>
    <string name="add_new_product">Add New Product</string>
    <string name="productDesc">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="productPrice">price</string>
    <string name="Search">search</string>
    <string name="name">Product Name</string>
    <string name="total_price">Total Price =</string>
    <string name="next">Next</string>
    <string name="qty">Quantity</string>
    <string name="login">Login</string>
    <string name="eMail">Email Address</string>
    <string name="password">Password</string>
    <string name="dontHaveAcc">Don\'t have an account?</string>
    <string name="rememberMe">Remember me</string>
    <string name="loginHere">Login Here</string>
    <string name="forgetPasssword">Forgot Password?</string>
    <string name="addtocart">ADD TO CART</string>
    <string name="confirm">Confirm</string>
    <string name="feedback">Provide Feedback</string>
    <string name="skip">Skip for now</string>
    <string name="invalid_Name">Please Enter a valid name</string>
    <string name="invalid_Email">please Enter a valid Email</string>
    <string name="submit">Submit</string>
    <string name="email_hint">Enter your Email</string>
    <string name="name_hint">Enter your Name</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="cart">Cart</string>
    <string name="wishList">WishList</string>
    <string name="orders">Orders</string>
    <string name="payMethod">Payment Method</string>
    <string name="purchaseHis">Purchase History</string>
    <string name="logOut">Log Out</string>
    <string name="title_activity_product_display">ProductDisplayActivity</string>


    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="changeImg">Change Image</string>

    <string name="action_delete">Delete</string>

</resources>