<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper"
    tools:context=".LoginActivity">



    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/loginHere"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#0E0E0E"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/uPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:drawableStart="@drawable/person_24"
        android:ems="10"
        android:hint="Phone "
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/person_24" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:drawableStart="@drawable/lock_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/lock_24" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgetPasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/forgetPasssword"
        android:textColor="#0E0E0E"
        android:textSize="14dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nav_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/dontHaveAcc"
        android:textColor="#003326"
        android:textSize="15dp" />

</LinearLayout>