<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="15dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/descbackground"
        android:padding="10dp"
        >
        
        <TextView
            android:id="@+id/cart_product_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/cart_product_qty"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:textAlignment="textEnd"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:gravity="end" />

        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cart_product_qty"
            android:layout_marginTop="10dp"
            android:text="@string/productPrice"
            android:gravity="center"
            android:textSize="14dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>