<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">
    
    <ImageView
        android:id="@+id/product_image_details"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        />
    <TextView
        android:id="@+id/product_name_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_image_details"
        android:text="@string/product_name"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/product_description_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name_details"
        android:text="@string/productDesc"
        android:textColor="@color/colorPrimary"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/product_price_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description_details"
        android:text="@string/productPrice"
        android:textColor="@color/colorPrimary"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        />

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/number_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price_details"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:initialNumber="1"
        app:textSize="16dp" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_product_to_cart"
            android:layout_width="wrap_content"
            android:scaleType="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_baseline_shopping_cart_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>