<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/close_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />
            <TextView
                android:id="@+id/update_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/settins_img"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/profile"
        android:layout_below="@id/app_bar_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/image_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeImg"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/settins_img"/>

    <EditText
        android:id="@+id/change_fName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="First name"
        android:layout_margin="15dp"
        android:layout_below="@id/image_change_btn"/>
    <EditText
        android:id="@+id/change_lName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Last name"
        android:layout_margin="15dp"
        android:layout_below="@id/change_fName"/>
    <EditText
        android:id="@+id/change_uName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="User name"
        android:layout_margin="15dp"
        android:layout_below="@id/change_lName"/>
    <EditText
        android:id="@+id/change_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="E mail"
        android:layout_margin="15dp"
        android:layout_below="@id/change_uName"/>

    <ImageView
        android:id="@+id/delete_btn"
        android:layout_width="35dp"
        android:layout_height="350dp"
        app:srcCompat="@drawable/delete_24"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/change_email"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginLeft="15dp" />

</RelativeLayout>